--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
